--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,10 +1,10 @@
 server {
 	listen 80 default;
 	location ^~ /uploads/ {
-		root /home/box/stepik_web_project; 
+		root /home/box/web; 
 	}
 	location ~* \.\w+ {
-		root /home/box/stepik_web_project/public;
+		root /home/box/web/public;
 	}
 	location / {
 		return 404;
