--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,3 +1,7 @@
+upstream back {
+    server 0.0.0.0:8080;
+}
+
 server {
 	listen 80 default;
 	location ^~ /uploads/ {
@@ -8,6 +12,10 @@ server {
 	}
 	location / {
 		return 404;
-	}	
+	}
+
+	location = /hello/ {
+	    proxy_pass http://back;
+	}
 }
 
