--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,5 +1,9 @@
-upstream back {
+upstream hello_app {
     server 0.0.0.0:8080;
+}
+
+upstream ask_app {
+    server 0.0.0.0:8000;
 }
 
 server {
@@ -11,11 +15,11 @@ server {
 		root /home/box/web/public;
 	}
 	location / {
-		return 404;
+		proxy_pass http://ask_app;
 	}
 
 	location ^~ /hello/ {
-	    proxy_pass http://back;
+	    proxy_pass http://hello_app;
 	}
 }
 
